--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--googlefonts-->
-    <link href="https://fonts.googleapis.com/css?family=Catamaran|Josefin+Sans|Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Sen&display=swap" rel="stylesheet">
 
     <!--bootstrap-->
     <link href="/assets/bootstrap-4.3.1-dist/css/bootstrap.css" rel="stylesheet">
